package wasteless.server.export.decorator;

public enum ReportColor {
    RED, GREEN, GRAY
}
