package wasteless.server.export.factory;

public enum FactoryType {
    REPORT_FACTORY
}
