package wasteless.server.export.report;

public enum ReportType {
    JSON_REPORT,
    TEXT_REPORT
}
